Closed Bug 1296333 Opened 8 years ago Closed 8 years ago

Minor mscom fixes

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: bugzilla, Assigned: bugzilla)

Details

Attachments

(1 file)

Some stuff found while debugging:

1) The interceptor needs to be able to handle IUnknown;
2) We need to properly handle encountering a nullptr when wrapping outparam interfaces;
3) Our assertion in the COMPtrHolder serializer should be willing to accept nullptr as a possible input.
Attached patch PatchSplinter Review
Attachment #8782498 - Flags: review?(jmathies)
Attachment #8782498 - Flags: review?(jmathies) → review+
https://hg.mozilla.org/mozilla-central/rev/b6174c5855f4
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: