Bug 1296333: Ensure better handling of nullptr and IUnknown in ipc::mscom; r=jimm

MozReview-Commit-ID: H1PvH3PIWdK